--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -26,7 +26,10 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
+
+  font-size: 10px;
 }
+
 
 @media (prefers-color-scheme: dark) {
   :root {
