git add partial basic auth using JWT

--- a/frontend/src/sass/base/_typography.scss
+++ b/frontend/src/sass/base/_typography.scss
@@ -1,13 +1,11 @@
 // typography .scss
-$base-font-size: 16px;
-$heading-font-family: 'Arial', sans-serif;
-$body-font-family: 'Roboto', sans-serif;
+$base-font-size: 1.6rem;
+$heading-font-family: "Arial", sans-serif;
+$body-font-family: "Roboto", sans-serif;
 $heading-line-height: 1.2;
 $body-line-height: 1.6;
 $heading-font-weight: bold;
 $body-font-weight: normal;
-
-
 
 // Heading styles
 h1 {
