--- a/frontend/src/sass/base/_root.scss
+++ b/frontend/src/sass/base/_root.scss
@@ -1,10 +1,19 @@
-//  root.scss 
-:root{
-    font-size: 10px;
+//  root.scss
+:root {
+  font-size: 10px;
 }
 
-body{
-    font-family: $body-font-family ;
-    line-height: $body-line-height ;
-    font-weight: $body-font-weight ;
+body {
+  font-family: $body-font-family;
+  line-height: $body-line-height;
+  font-weight: $body-font-weight;
+  font-size: 2rem;
+}
+
+.main-container {
+  display: flex;
+}
+
+main {
+  flex: 1;
 }
