--- a/frontend/src/sass/layouts/_sidebar.scss
+++ b/frontend/src/sass/layouts/_sidebar.scss
@@ -90,57 +90,62 @@
       border: 1px solid #ccc; /* Add a default border color */
       color: $color-neutral-dark; /* Set the default text color */
       background-color: #fff; /* Set the default background color */
-    
+
       &::placeholder {
         color: #aaa; /* Replace with the appropriate placeholder color */
       }
-    
+
       &:focus {
         border-color: $color-primary; /* Use the primary color for the border on focus */
         box-shadow: 0 0 4px $color-primary; /* Add a subtle box shadow on focus */
       }
     }
   }
-
-  .routes {
-    margin-top: $large-spacing;
+  .routes_container {
     display: flex;
     flex-direction: column;
-    gap: $small-spacing;
-
-    .link {
+    height: 100%;
+    justify-content: space-between;
+    .routes {
+      margin-top: $large-spacing;
       display: flex;
-      color: inherit;
-      padding: $small-spacing $medium-spacing;
-      border-right: $small-spacing solid transparent;
-      transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
-      text-decoration: none;
-      display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
+      gap: $small-spacing;
 
-      &:hover {
-        border-right: $small-spacing solid $color-neutral-dark;
-        color: $color-neutral-dark;
+      .link {
+        display: flex;
+        color: inherit;
+        padding: $small-spacing $medium-spacing;
+        border-right: $small-spacing solid transparent;
         transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
-      }
+        text-decoration: none;
+        display: flex;
+        flex-wrap: wrap;
 
-      &.active {
-        border-right: $small-spacing solid $color-neutral-dark;
-        background: $color-accent;
-      }
+        &:hover {
+          border-right: $small-spacing solid $color-neutral-dark;
+          color: $color-neutral-dark;
+          transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+        }
 
-      .icon {
-        transition: 0.2s;
-        font-size: $large-size;
-        line-height: 100%;
-        /* Additional styles for icons, if required */
-      }
+        &.active {
+          border-right: $small-spacing solid $color-neutral-dark;
+          background: $color-accent;
+        }
 
-      .link_text {
-        white-space: nowrap;
-        font-size: $medium-size;
-        font-weight: bold;
-        margin: 0 $small-spacing;
+        .icon {
+          transition: 0.2s;
+          font-size: $large-size;
+          line-height: 100%;
+          /* Additional styles for icons, if required */
+        }
+
+        .link_text {
+          white-space: nowrap;
+          font-size: $medium-size;
+          font-weight: bold;
+          margin: 0 $small-spacing;
+        }
       }
     }
   }
