--- a/frontend/src/sass/components/_card.scss
+++ b/frontend/src/sass/components/_card.scss
@@ -73,6 +73,12 @@
   .form-btn:hover {
     box-shadow: 0px 1px 18px $color-primary;
   }
+  .form-btn:disabled {
+    background: linear-gradient(to right, gray, gray); /* Change background gradient */
+    box-shadow: none; /* Remove shadow */
+    cursor: not-allowed; /* Change cursor */
+    opacity: 0.6; /* Add opacity to indicate disabled state */
+  }
 
   .form-border {
     background: -webkit-linear-gradient(
